# gsmlib

./: ChangeLog  Makefile.am  aclocal.m4  configure.ac  gsm_config.h.in
apps/: Makefile.am
ext/: Makefile.am
gsmlib/: Makefile.am
po/: ChangeLog
tests/: Makefile.am
